list.cppresult.txt
In file included from cur.cpp:13:0:
ruslan/list.cpp: In instantiation of 'T Linkedlist<T>::get(int) [with T = std::basic_string<char>]':
cur.cpp:201:1:   required from here
ruslan/list.cpp:124:4: error: return-statement with no value, in function returning 'std::basic_string<char>' [-fpermissive]
    return;
    ^
ruslan/list.cpp: In instantiation of 'T Linkedlist<T>::remove(int) [with T = std::basic_string<char>]':
cur.cpp:201:1:   required from here
ruslan/list.cpp:167:4: error: return-statement with no value, in function returning 'std::basic_string<char>' [-fpermissive]
    return;
    ^
./check.sh: line 24: ./a.out: No such file or directory
